# Insane-Soundbar

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  patch_isb_orchestrator.patch  test_plan.txt  test_xvfb.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-apk.yml  build-bluetooth.yml  build-dsp.yml  build-icc.yml  build-sub-rx.yml  build-sub-tx.yml  esphome-check.yml
BOM/: BOM_ISB-Subwoofer.csv  BOM_Insane-Flashcore.csv  BOM_Insane-Sound-Bar.csv
Firmware/Bluetooth/: platformio.ini
Firmware/Bluetooth/src/: main.cpp
Firmware/DSP/: CMakeLists.txt  audio_i2s.pio  audio_routing.c  audio_routing.h  audio_spdif.pio  biquad.c  biquad.h  config.h  dsp_core1.c  dsp_core1.h  i2c_registers.h  i2c_slave_handler.c  i2c_slave_handler.h  main.c  pico_sdk_import.cmake
Firmware/Master/: CMakeLists.txt  example_secrets.yaml  insane_soundbar.yaml  main_ctrl.yaml  platformio.ini  secrets.yaml
Firmware/Master/src/: main.c
Firmware/SUB_RX/: .gitignore  README.md  platformio.ini
Firmware/SUB_RX/src/: main.cpp
Firmware/SUB_TX/: CMakeLists.txt  README.md  sdkconfig.defaults
Firmware/SUB_TX/main/: CMakeLists.txt  main.c
Flasher/Dev-Tools/: build-exe.py
Flasher/Linux/: InsaneControlCenter.py  InsaneFlasher.py
Flasher/old_v5/Linux_Mac/: InsaneFlasher.py  test_insaneflasher.py
Flasher/old_v6(2.1)/: proxy_flasher_cli.py  test_proxy_flasher.py
Flasher/old_v6(2.1)/Linux_Mac/: InsaneFlasher.py  (+1 more)
Insane Control Center/Android/: README.md  pyproject.toml  requirements.txt
Insane Control Center/Android/.artifacts/20260517-201836-a0df2bec-c544-404a-bfe9-53a93d2a6911/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
Insane Control Center/Android/src/: main.py
Insane Control Center/Linux/: InsaneControlCenter.py
Plans/: ISB-PinMapping_v2.md  ISB-PinMapping_v3.md  ISB_Konstruktion_V1.md  ISB_Subwoofer_Specs.md  i2c_register_map.md
components/isb_orchestrator/: __init__.py  isb_orchestrator.h  isb_orchestrator.h.orig
components/stream_server/: stream_server.cpp  stream_server.h
iBOM/: iBOM_ISB-Subwoofer.html  iBOM_Insane Sound Bar.html  iBOM_Insane-Flashcore.html
wiki/: Architektur.md  Firmware.md  Hardware.md  Home.md  Kommunikation.md  Software.md  Subwoofer_Link.md  _Sidebar.md
(+3 files in other folders)
