[project]
name = "InsaneControlCenter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.1",
    "requests",
    "zeroconf",
    "esptool",
    "pyserial"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.1",
    "flet-desktop>=0.85.1",
    "flet-web>=0.85.1",
]

[tool.flet]
desktop_flavor = "light"    # Change to "full" to use flet-audio and flet-video
org = "com.babeinlovexd"
product = "Insane Control Center"
company = "BabeinlovexD"
copyright = "Copyright (C) 2026 by BabeinlovexD"

[tool.flet.app]
path = "src"
